Fixed nav overflow on mobile

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -2,6 +2,12 @@
 
 @import '../components/type';
 
+html, body {
+  overflow-x: hidden;
+  position: relative;
+  width: 100%;
+}
+
 .hero {
   height: 100dvh;
   display: flex;
@@ -9,6 +15,8 @@
   justify-content: center;
   align-items: center;
   background: radial-gradient(ellipse, rgba(32, 20, 50, 1) 0%, rgba(13, 15, 21, 1) 50%);
+  overflow: hidden;
+  max-width: 100%;
   &__h1 {
     background: linear-gradient(90deg, #524DD7 0%, #BE45FF 100%);
     background-clip: text;
